--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -2,6 +2,6 @@
   width: calc(85vw - 25px);
   margin: 25px auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 25px;
 }
