--- a/src/components/CardList/CardList.css
+++ b/src/components/CardList/CardList.css
@@ -1,7 +1,10 @@
 .card-list {
   width: calc(85vw - 25px);
   margin: 25px auto;
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, 1fr);
+  gap: 50px; */
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 25px;
+  grid-gap: 25px;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
